# operast

./: .gitignore  README.md  README.rst  pyproject.toml  render_diagrams.sh  run_tests.sh  setup.py  test.sh
operast/: __init__.py  _ext.py  ast_elem.py  ast_pattern.py  constraints.py  fsm.py  operast.py  operast2.py  operast3.py  operast_old.py  operator.py  pattern.py  thompson.py  tree.py
operast/operast4/: tree.py
state_diagrams/: callName.drawio  funcDefUntilAssnUntilNoChild.drawio  oldStateDiags.drawio  stackState.drawio
test/: test_constraints.py  test_operast.py  test_operast3.py  test_pattern.py
tests/: test_ast_pattern.py  test_constraints.py  test_operast.py  test_operast3.py  test_operator.py  test_pattern.py  test_thompson.py  test_tree.py
