[project]
name = "operast"
version = "0.1.0"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "astpretty == 3.0.0",
    "attrs == 23.1.0",
    "typed-ast == 1.5.4",
    "typing-extensions == 4.6.0",
]

[project.optional-dependencies]
dev = [
    "black == 23.3.0",
    "coverage == 7.2.5",
    "hypothesis == 6.75.3",
    "mypy == 1.3.0",
    "pytest == 7.3.1",
    "pytest-cov == 4.0.0",
    "ruff == 0.0.265",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["operast"]

[tool.ruff]
target-version = "py311"
exclude = [
    ".eggs",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
    # old code
    "operast2.py",
    "operast3.py",
    "operast_old.py",
]

select = ["A", "B", "C4", "E", "EM", "F", "I", "INP", "ISC", "N", "PGH", "PIE", "RUF", "UP", "W"]

ignore = [
    # It's fine to shaddow builtin names, as long as the shadowing is namespaced
    "A003",
    # Ignore ANN101 & ANN102 to avoid annotating all `self` & `cls` args
    "ANN101",
    "ANN102",
    # Ignore use of unicode math symbols
    "RUF003",
]

# Same as Black.
line-length = 88

# Runs fix automatically. We can turn this on once everyone is used to the
# checks we are running
#fix = true

[tool.ruff.per-file-ignores]
# Allow star imports in __init__ only as we use this functionality to simplify
# fine tuning of package imports for library consumers. Unfortunately, we also
# have to disable checking of unused imports to make this work.
"__init__.py" = ["F401", "F403", "F405"]

"test_*.py" = [
    # Test lines can be too long
    "E501",
    # Allow star imports in tests, for convenience.
    "F401", "F403", "F405",
    # Ignore implicit namspaces package error as adding __init__.py files to
    # test dirs causes issues with pytest.
    "INP",
    # Ignore pep8 naming for test functions.
    "N801", "N802"
]

# setup.py files do not need to be in a dir with an __init__.py file due to the
# way we organise packages, so ignore the implicit namespace package error.
"setup.py" = ["INP"]

[tool.ruff.isort]
# Use the "extra-standard-library" config to make EVERYTHING sort alphabetically
# instead of the asinine separation of std, 3rd party, etc...

# What should go in this list is the exact name of a package as it is imported,
# not as it is installed with pip. For example, the "python-dotenv" package is
# imported as just "dotenv", and this is what we put into the list below.
extra-standard-library = [
    # third-party
    "astpretty",
    "attrs",
    "typed_ast",
    "typing_extensions",
    "coverage",
    "hypothesis",
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
    # first-party
    "operast",
]
